# Pipelined-CPU-Emu

./: .gitignore  0.bootstrap.js  1.bootstrap.js  Cargo.toml  LICENSE.md  README.md  bootstrap.js  build.ps1  index.html  package.json  patch.py  terminal.js
.cargo/: config.toml
app/: index.html  index.js  package-lock.json  package.json  webpack.config.js
src/: ansi_escaping.rs  cpu.rs  device.rs  lib.rs  main.rs  syntax_highlighting.rs  tests.rs  types.rs
src/assembler/: ast.rs  eval.rs  lexer.rs  mod.rs  parser.rs
vscode-extension/pipelined-cpu-asm/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
vscode-extension/pipelined-cpu-asm/syntaxes/: pcpuasm.tmLanguage.json
