[package]
name = "jam-1_emu"
version = "0.2.0"
edition = "2021"

[dependencies]
winit = "0.27"
wgpu = "0.14"
egui-winit = "0.20"
egui-wgpu = { version = "0.20", features = ["winit"] }
egui = "0.20"
spin_sleep = "1.0"
crossterm = "0.21"
rodio = "0.14"
gilrs = "0.10"
crossbeam = "0.8"
rfd = "0.10"
modular-bitfield = "0.11"
bitflags = "1.3"
clap = { version = "3.2", features = ["derive"] }
